# wfcvm

./: AUTHORS  CITATION.cff  ChangeLog.md  Makefile.am  NEWS  README  README.md  configure.ac
.github/scripts/: wfcvm-build.sh  wfcvm-test-standalone.sh  wfcvm-test-ucvm.sh  wfcvm-test.sh
.github/workflows/: test-ci.yml  wfcvm-ci.yml  wfcvm-ucvm-ci.yml
data/: Makefile.am  config
data/3d/: boreholes3  soil_generic4_lo
src/: .Makefile.swp  Makefile.am  borehole.h  boreholes3  genpro.h  names.h  number.h  origMakefile  points_in  regional.h  regionald.h  rkinfo.h  run_vx_wfcvm.sh  run_wfcvm_txt.sh  soil1.h  soil_generic4_lo  surface.h  surfaced.h  test.in  test.out  ucvm_model_dtypes.h  version.h  vx_wfcvm.c  wf_cvm3c.f  wf_cvm3d.f  wfcvm  wfcvm.c  wfcvm.h  wfcvm_main.f  wfcvm_sub.f  wfcvm_sub_local.f  wfcvm_txt.f  wtbh1.h  wtbh1d.h  wtbh2.h  wtbh3.h
src3c/: config  genpro.h  in.h  names.h  params.h  regional.h  regionald.h  rkinfo.h  run_wfcvm_txt.sh  wfcvm.h  wfcvm_main.f  wfcvm_sub.f  wtbh1.h
test/: Makefile.am  accepttest.c  run_accept  run_unit  test-extract.ref  test_grid.c  test_grid_exec.c  test_helper.c  test_helper.h  test_vx_wfcvm_exec.c  test_vx_wfcvm_exec.h  test_wfcvm_exec.c  test_wfcvm_exec.h  unittest.c  unittest_defs.c  unittest_defs.h
test/inputs/: test-grid.in
test/ref/: test-extract.ref  test-grid-extract.ref  test_latlons_gd.ref  test_latlons_ucvm_ge.ref
